fix: NoOffSet 방식 순서보장 방식으로 변경